# commuting-signature

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml
benches/: bench.rs
src/: adpr.rs  ciphertexts.rs  commit.rs  equations.rs  lib.rs  params.rs  proofs.rs  randomness.rs  sigcom.rs  signer.rs  verifier.rs
src/automorphic_signature/: message.rs  mod.rs  params.rs  sign.rs  signature.rs  verify.rs
