[package]
name = "commuting-signature"
version = "0.1.0"
description = "Implementation of commuting signatures defined in the paper 'Commuting Signatures and Verifiable Encryption' by Georg Fuchsbauer"
authors = ["alvin.cpp@gmail.com"]
license = "MIT/Apache-2.0"
repository = "https://github.com/AlvinHon/commuting-signature"
categories = ["cryptography"]
keywords = ["cryptography", "signature", "commitment", "zero-knowledge", "automorphic-signature"]
edition = "2021"

[lib]
name = "commuting_signature"
path = "src/lib.rs"

[dependencies]
ark-ec = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
gs-ppe = { git = "https://github.com/AlvinHon/gs-ppe"}

[dev-dependencies]
ark-bls12-381 = "0.5"